🏜💺 Checkpoint ./black.js:27546908/128

--- a/config.json
+++ b/config.json
@@ -1,1 +1,11 @@
-{}
+{
+  "768077505021083649": {
+    "banLimit": 3,
+    "chaDelLimit": 3,
+    "chaCrLimit": 3,
+    "roleDelLimit": 3,
+    "kickLimits": 3,
+    "roleCrLimits": 3,
+    "time": 30
+  }
+}
